# llvm-transmem

./: Makefile  Makefile.libnames  README.md  compile.sh  generate.sh  run.sh
Dockerfile/: Dockerfile  install.sh
include/: tm.h  tm_api.h
libs/: Makefile  README.md
libs/api/: constants.h  execute.h  frame.h  mem.h
libs/common/: alloc.h  cm.h  epochs.h  memfuncs.h  orec_t.h  p_alloc.h  p_coarse_redolog.h  p_coarse_undolog.h  p_minivector.h  p_redolog.h  p_status_t.h  p_undolog.h  p_vlog_t.h  pad_word.h  platform.h  pmem_platform.h  redolog.h  stackframe.h  undo_t.h  vlog_t.h
libs/ptm_algs/: p_cgl_eager.h  p_cgl_lazy.h  p_norec.h  p_orec_eager.h  p_orec_lazy.h  p_orec_mixed.h  p_ring_mw.h  p_ring_sw.h  p_tlrw_eager.h
libs/ptm_instances/: pg_cgl_eager.cc  pg_cgl_lazy.cc  pg_norec.cc  pg_orec_eager.cc  pg_orec_lazy.cc  pg_orec_mixed.cc  pg_ring_mw.cc  pg_ring_sw.cc  pg_tlrw_eager.cc  pi_cgl_eager.cc  pi_cgl_lazy.cc  pi_norec.cc  pi_orec_eager.cc  pi_orec_lazy.cc  pi_orec_mixed.cc  pi_ring_mw.cc  pi_ring_sw.cc  pi_tlrw_eager.cc  pn_cgl_eager.cc  pn_cgl_lazy.cc  pn_norec.cc  pn_orec_eager.cc  pn_orec_lazy.cc  pn_orec_mixed.cc  pn_ring_mw.cc  pn_ring_sw.cc  pn_tlrw_eager.cc
libs/stm_algs/: cgl.h  cohorts.h  htm_gl.h  hybrid_norec_two_counter.h  norec.h  orec_eager.h  orec_lazy.h  orec_mixed.h  reduced_hardware_norec.h  ring_mw.h  ring_sw.h  tlrw_eager.h  tml_eager.h  tml_lazy.h
libs/stm_instances/: cgl_mutex.cc  cohorts.cc  htm_gl.cc  hybrid_norec_two_counter.cc  norec_quiescence.cc  orec_eager_quiescence.cc  orec_lazy_quiescence.cc  orec_mixed_quiescence.cc  reduced_hardware_norec.cc  ring_mw.cc  ring_sw.cc  tml_eager.cc  tml_lazy.cc
memcached/: Makefile  assoc.cc  assoc.h  b.sh  build.sh  config.status  hash.h  items.cc  items.h  memcached.cc  memcached.h  run.sh  run_ptm.sh  slabs.h  stats.cc  stats.h  thread.cc
memcached/doc/: Makefile
plugin/: CMakeLists.txt  README.md  boundary_transform.cc  discovery.cc  function_features.h  function_transform.cc  mappings.cc  optimizations.cc  signatures.cc  signatures.h  tm_plugin.cc  tm_plugin.h
ptm_tm/: README.md
ptm_tm/benchmarks/: Makefile  README.md  ubench.mk
ptm_tm/benchmarks/memcached_lambda/: Makefile  assoc.h  config.h  memcached.cc  slabs.cc  slabs.h  thread.cc
ptm_tm/common/: lambda.mk  raii_lite.mk
ptm_tm/libs/: Makefile  README.md  tm_names.mk
ptm_tm/plugin/: README.md  while_in_tx_001.cc
tbench/: Makefile  bplustree.cc  bplustree.h  bplustree_mix.cc  hashtable.h  makefile.common  run_bplustree.sh  run_bplustreemix.sh  run_tatp.sh  run_tpcc.sh  run_tpcc_B.sh  tatp.cc  tatp.h  tpcc.cc  tpcc.h  tpcc_B+.cc  util.h
tm/: .gitignore  Makefile  README.md
tm/benchmarks/: memcached.mk  stamp.mk  tbench.mk
tm/common/: lambda_lite.mk  raii.mk  tm_api.h  tm_defines.h
tm/libs/: .gitignore  README.md  tm_names.mk
tm/plugin/: Makefile
tm/plugin/plugin/: CMakeLists.txt  discovery.cc  function_transform.cc  signatures.cc  tm_plugin.cc  types.h
vacation/: Makefile.common  def.h
vacation/lib/: avltree.cc  avltree.h  bitmap.cc  bitmap.h  conc_hashtable.cc  conc_hashtable.h  hash.cc  hash.h  hashtable.cc  hashtable.h  heap.cc  list.cc  list.h  pair.cc  pair.h  queue.cc  queue.h  random.cc  rbtree.cc  rbtree.h  thread.h  vector.cc  vector.h
vacation/vacation/: Defines.common.mk  Makefile  Makefile.hle_intel  Makefile.htm_ibm  client.cc  client.h  customer.cc  customer.h  manager.cc  manager.h  reservation.cc  reservation.h  result.txt  run_high.sh  run_high_ptm.sh  run_low.sh  run_low_ptm.sh  vacation.cc
(+481 files in other folders)
